--- a/.gitignore
+++ b/.gitignore
@@ -58,7 +58,9 @@ build/Release
 
 node_modules/
 jspm_packages/
+
 Data/*
+!Data/.gitkeep
 
 # Snowpack dependency directory (https://snowpack.dev/)
 
